[package]
name = "okspiel"
version = "0.4.0"
authors = ["spielcrypto <spielcrypto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Desktop application to handle remotely multiple Okcash full node wallets"
homepage = "https://github.com/dancespiele/okspiel"
readme = "README.md"
repository = "https://github.com/dancespiele/okspiel"
categories = ["cryptography::cryptocurrencies", "gui", "asynchronous"]
include = [
    "**/*.rs",
    "assets/*.svg",
    "Cargo.toml"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[dependencies]
tokio = { version = "1.6.1", features = ["full"] }
iced = { version= "0.3", features = ["tokio", "qr_code", "svg"] }
sled = "0.34"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest= {version = "0.11", features = ["json"]}
dirs= "3.0"
copypasta= "0.7"
futures= "0.3"
dotenv = "0.15"

[package.metadata.deb]
assets = ["assets", "~/.okspiel/"]